--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="./img/logo.svg" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SofiBoiko</title>
+  <link rel="icon" type="image/svg+xml" href="./img/logo.svg" />
+  <title>Gallery</title>
   <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
@@ -18,22 +19,15 @@
             <use href="./img/logo.svg"></use>
           </svg>
         </a>
-        <ul class="nav-list">
-          <li class="nav-item">
-            <a class="nav-link" href="./1-gallery.html">Gallery</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./2-form.html">Form</a>
-          </li>
-        </ul>
       </nav>
     </div>
   </header>
+
   <main>
 
+    <a class="back-link" href="./index.html">Go back</a>
   </main>
-
-
+  <script type="module" src="./js/1-gallery.js"></script>
 </body>
 
 </html>
