--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -20,12 +20,14 @@
           </svg>
         </a>
       </nav>
+
     </div>
   </header>
 
   <main>
 
     <a class="back-link" href="./index.html">Go back</a>
+    <ul class="gallery"></ul>
   </main>
   <script type="module" src="./js/1-gallery.js"></script>
 </body>
