--- a/src/2-form.html
+++ b/src/2-form.html
@@ -24,6 +24,18 @@
   </header>
   <main>
     <a class="back-link" href="./index.html">Go back</a>
+    <form class="feedback-form" autocomplete="off">
+      <label class="modal-label">
+        Email
+        <input class="modal-imput" type="email" name="email" autofocus />
+      </label>
+      <label class="modal-label">
+        Message
+        <textarea class="modal-textarea" name="message" rows="8"></textarea>
+      </label>
+      <button class="modal-btn" type="submit">Submit</button>
+    </form>
+
   </main>
 
   <script type="module" src="./js/2-form.js"></script>
